language-server/src/tests/snapshots/gleam_language_server__tests__action__allow_further_pattern_matching_on_asserted_result.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main(x) {\n  let assert Ok(one) = Ok(Error(Nil))\n}\n"
---
----- BEFORE ACTION
pub fn main(x) {
  let assert Ok(one) = Ok(Error(Nil))
                ↑                    
}


----- AFTER ACTION
pub fn main(x) {
  let assert Ok(one) = Ok(Error(Nil))
  case one {
    Ok(value) -> todo
    Error(value) -> todo
  }
}
