language-server/src/tests/snapshots/gleam_language_server__tests__action__allow_further_pattern_matching_on_let_record_destructuring.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main(x) {\n  let Wibble(field:) = Wibble(Ok(Nil))\n}\n\npub type Wibble { Wibble(field: Result(Nil, String)) }\n"
---
----- BEFORE ACTION
pub fn main(x) {
  let Wibble(field:) = Wibble(Ok(Nil))
             ↑                        
}

pub type Wibble { Wibble(field: Result(Nil, String)) }


----- AFTER ACTION
pub fn main(x) {
  let Wibble(field:) = Wibble(Ok(Nil))
  case field {
    Ok(value) -> todo
    Error(value) -> todo
  }
}

pub type Wibble { Wibble(field: Result(Nil, String)) }
