language-server/src/tests/snapshots/gleam_language_server__tests__action__allow_further_pattern_matching_on_let_tuple_destructuring.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main(x) {\n  let #(one, other) = #(Ok(1), Error(Nil))\n}\n"
---
----- BEFORE ACTION
pub fn main(x) {
  let #(one, other) = #(Ok(1), Error(Nil))
        ↑                                 
}


----- AFTER ACTION
pub fn main(x) {
  let #(one, other) = #(Ok(1), Error(Nil))
  case one {
    Ok(value) -> todo
    Error(value) -> todo
  }
}
