language-server/src/tests/snapshots/gleam_language_server__tests__action__annotate_all_top_level_definitions_dont_affect_local_vars.snap
---
source: language-server/src/tests/action.rs
expression: "\npub const answer = 42\n\npub fn add_two(thing) {\n  thing + 2\n}\n\npub fn add_one(thing) {\n  let result = thing + 1\n  result\n}\n"
---
----- BEFORE ACTION

pub const answer = 42

pub fn add_two(thing) {
    ▔▔▔▔▔▔▔▔▔▔↑        
  thing + 2
}

pub fn add_one(thing) {
  let result = thing + 1
  result
}


----- AFTER ACTION

pub const answer: Int = 42

pub fn add_two(thing: Int) -> Int {
  thing + 2
}

pub fn add_one(thing: Int) -> Int {
  let result = thing + 1
  result
}
