language-server/src/tests/snapshots/gleam_language_server__tests__action__annotate_all_top_level_definitions_function.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn add_two(thing) {\n  thing + 2\n}\n\npub fn add_one(thing) {\n  thing + 1\n}\n"
---
----- BEFORE ACTION

pub fn add_two(thing) {
    ▔▔▔▔▔▔▔▔▔▔↑        
  thing + 2
}

pub fn add_one(thing) {
  thing + 1
}


----- AFTER ACTION

pub fn add_two(thing: Int) -> Int {
  thing + 2
}

pub fn add_one(thing: Int) -> Int {
  thing + 1
}
