language-server/src/tests/snapshots/gleam_language_server__tests__action__annotate_all_top_level_definitions_with_partially_annotated_generic_function.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn wibble(a: a, b, c: c, d) {\n  todo\n}\n"
---
----- BEFORE ACTION

pub fn wibble(a: a, b, c: c, d) {
       ↑                         
  todo
}


----- AFTER ACTION

pub fn wibble(a: a, b: b, c: c, d: d) -> e {
  todo
}
